<resources>
    <string name="app_name">Hearthstone Collector App</string>
    <string name="facebook_app_id">2176932982528313</string>
    <string name="fb_login_protocol_scheme">fb2176932982528313</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="nav_drawer_cards">Mes cartes</string>
    <string name="nav_drawer_decks">Mes decks</string>
    <string name="nav_drawer_trade">Mes échanges</string>
    <string name="nav_drawer_quizz">Quizz</string>
    <string name="nav_drawer_shop">Magasin</string>
    <string name="nav_deconnexion">Se déconnecter</string>

    <string name="menu_ic_add">Ajouter</string>

    <string name="connexion">Se connecter à Hearthstone Collector</string>
    <string name="login_mail_hint">Adresse e-mail ou pseudo</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="connexion_classic">Se connecter</string>
    <string name="connexion_fb">Facebook</string>
    <string name="connexion_google">Google</string>
    <string name="deconnexion_google">Se déconnecter avec Google</string>
    <string name="creation_compte">Créer un compte</string>

    <string name="inscription_pseudo">Pseudo *</string>
    <string name="inscription_prenom">Prénom</string>
    <string name="inscription_nom">Nom</string>
    <string name="inscription_email">E-mail *</string>
    <string name="inscription_mdp">Mot de passe *</string>
    <string name="inscription_mdp_confirmation">Confirmer le mot de passe *</string>
    <string name="inscription_action">S\'inscrire</string>
    <string name="inscription_obligatoires">* Champs obligatoires</string>
    <string name="inscription_label_identifiants">IDENTIFIANTS</string>

    <string name="cancel">Annuler</string>
    <string name="positive_button">Oui</string>

    <string name="trade_item_avec">avec</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_form_create_user">FormCreateUserActivity</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

</resources>
